@@ -1,5 +1,8 @@
-*~
 .stgit*
-\#*#
+*~
 
 /output/
+/obj-*/
+
+/.clangd/
+/compile_commands.json
