@@ -3,7 +3,6 @@
 /*.log
 /*-stamp
 /files
-/build/
 /tmp/
 /libcm4all-was*-dev/
 /libcm4all-was-*1/
