@@ -2,7 +2,7 @@ Source: libcm4all-was
 Section: libs
 Priority: optional
 Maintainer: Max Kellermann <mk@cm4all.com>
-Build-Depends: debhelper (>= 10~),
+Build-Depends: debhelper (>= 12~),
  meson (>= 0.49),
  g++ (>= 4:6),
  doxygen (>= 1.2),
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 10~),
  libcm4all-core-dev (>= 1.20.5),
  libcm4all-http-dev (>= 1.2.6)
 Build-Conflicts: libcm4all-was-dev
-Standards-Version: 3.9.1
+Standards-Version: 4.0.0
 Vcs-git: https://github.com/CM4all/libwas/
 
 Package: libcm4all-was-protocol-dev
