@@ -4,11 +4,7 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-MESON_BUILDTYPE = debugoptimized
-
 MESON_OPTIONS = \
-	--buildtype $(MESON_BUILDTYPE) \
-	--prefix=/usr \
 	--includedir=include/cm4all/libwas-1 \
 	-Ddocumentation=enabled \
 	--werror
@@ -19,14 +15,6 @@ MESON_OPTIONS = \
 override_dh_auto_clean:
 	rm -rf debian/build
 
+.PHONY: override_dh_auto_configure
 override_dh_auto_configure:
-	meson . debian/build $(MESON_OPTIONS)
-
-override_dh_auto_build:
-	ninja -v -C debian/build
-
-override_dh_auto_test:
-	ninja -v -C debian/build test
-
-override_dh_auto_install:
-	DESTDIR=${CURDIR}/debian/tmp ninja -v -C debian/build install
+	dh_auto_configure -- $(MESON_OPTIONS)
